k8s/rollout.yml
# apiVersion: argoproj.io/v1alpha1
# kind: Rollout
# metadata:
#   name: rollouts-demo
# spec:
#   replicas: 5
#   strategy:
#     canary:
#       steps:
#       - setWeight: 20
#       - pause: {}
#       - setWeight: 40
#       - pause: {duration: 10}
#       - setWeight: 60
#       - pause: {duration: 10}
#       - setWeight: 80
#       - pause: {duration: 10}
#   revisionHistoryLimit: 2
#   selector:
#     matchLabels:
#       app: rollouts-demo
#   template:
#     metadata:
#       labels:
#         app: rollouts-demo
#     spec:
#       containers:
#       - name: rollouts-demo
#         image: argoproj/rollouts-demo:blue
#         ports:
#         - name: http
#           containerPort: 8080
#           protocol: TCP
#         resources:
#           requests:
#             memory: 32Mi
#             cpu: 5m

apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: angular-canary
spec:
  replicas: 5
  selector:
    matchLabels:
      app: angular-canary
  template:
    metadata:
      labels:
        app: angular-canary
    spec:
      containers:
        - name: angular-canary
          image: "vfjansen/angular-app-kube:v8.2"

          resources:
            requests:
              cpu: "50m"
              memory: 10Mi
            limits:
              cpu: "75m"
              memory: 25Mi

          startupProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 3
            failureThreshold: 30
          # reinicia o deploy para tentar manter a aplicação estável
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 5
            failureThreshold: 3
            timeoutSeconds: 1
            successThreshold: 1
            initialDelaySeconds: 10
          # verifica se a aplicação está pronta pra recever tráfego e habilita o port forward
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 3
            failureThreshold: 1
            initialDelaySeconds: 10
  strategy:
    canary:
      # Number of pods to add in each step
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 40
        - pause:
            duration: 60s
        - setWeight: 60
        - pause:
            duration: 60s
        - setWeight: 80
        - pause:
            duration: 60s
