k8s/service.yml
# apiVersion: v1
# kind: Service
# metadata:
#   name: rollouts-demo
# spec:
#   ports:
#   - port: 80
#     targetPort: 80
#     protocol: TCP
#     name: http
#   type: LoadBalancer
#   selector:
#     app: rollouts-demo

apiVersion: v1
kind: Service
metadata:
  name: angular-canary
spec:
  selector:
    app: angular-canary
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
